[tool]
[tool.poetry]
name = "textnets"
version = "0.9.1"
description = "Automated text analysis with networks"
license = "GNU General Public License v3"
keywords = ["computational social science", "network analysis", "nlp", "text analysis", "visualization"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Science/Research", "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Natural Language :: English", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Scientific/Engineering :: Visualization", "Topic :: Sociology"]
homepage = "https://textnets.readthedocs.io"
repository = "https://github.com/jboynyc/textnets"
authors = ["John D. Boy <jboy@bius.moe>"]
readme = "README.rst"
include = ["docs/*.rst", "docs/*.py", "docs/refs.bib", "docs/*.svg", "docs/_static", "LICENSE", "*.rst", "tests/*.py"]
exclude = ["textnets/_ext.c"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jboynyc/textnets/issues"
"Changelog" = "https://textnets.readthedocs.io/en/stable/history.html"
"Documentation" = "https://textnets.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
setuptools = ">=41"
Cython = "^0.29.24"
igraph = "^0.10.4"
leidenalg = "^0.9.0"
pandas = "^2.0.1"
cairocffi = {version = "^1.4.0", markers = "sys_platform=='linux' or sys_platform=='darwin'"}
pycairo = {version = "^1.22.0", markers = "sys_platform=='win32'"}
scipy = "^1.9.1"
spacy = "^3.5.3"
toolz = "^0.12.0"
tqdm = "^4.64.1"
wasabi = ">=0.10.1"
concepts = {version = "^0.9.2", optional = true}

[tool.poetry.group.doc.dependencies]
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz"}
ipykernel = "^6.22.0"
jupyter-sphinx = "^0.4.0"
shibuya = {version = "^2023.6.8", allow-prereleases = true}
sphinx = "^7.0.0"
sphinxcontrib-bibtex = "^2.3.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.5"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.1.2"
ufmt = "^2.0.0"
pandas-stubs = "^2.0.1.230501"

[tool.poetry.extras]
fca = ["concepts"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "setuptools>=41"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "textnets"
warn_unused_ignores = true
warn_unreachable = true
ignore_missing_imports = true
pretty = true
